# easyprof

./: .gitmodules  CMakeLists.txt  README.md
include/: easyprof.h
src/: cuda_driver_wrappers.cpp  cuda_driver_wrappers.cu  easyprof.cpp  easyprof.cu  hip_wrappers.cu  launch.cpp  launch.cu  loader.cpp  loader.cu  matcher.cpp  matcher.cu  register.cpp  register.cu  sync.cpp  sync.cu  timer.cpp  timer.cu
